#92 update quadradius CSS to avoid visual div overflow issues

--- a/src/static/styles/index.css
+++ b/src/static/styles/index.css
@@ -138,8 +138,8 @@ body {
 
 #quadboard {
     display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(10, 10%);
+    grid-template-rows: repeat(8, 12.5%);
     margin-top: 4%;
     margin-left: 8%;
     width: 512px;
@@ -153,8 +153,8 @@ body {
     background-color: red;
     background-position: center;
     background-repeat: no-repeat;
-    width: 1fr;
-    height: 1fr;
+    position: relative;
+    overflow: hidden;
     border: 1px solid slategray;
 }
 
